Fix alignment details page

--- a/css/details.css
+++ b/css/details.css
@@ -5,15 +5,15 @@
   font-weight: bold;
   cursor: pointer;
   padding: 18px;
-  width: 100%;
   border: none;
-  text-align: left;
+  text-align: center;
   outline: none;
   font-size: 15px;
   border-radius: 5px;
   border-style: solid;
   border-color: #217566;
   border-width: 1.5px;
+  width:100%
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
@@ -45,6 +45,13 @@
   text-align: center;
   color:#217566;
 }
-body{
-  background-color: #dfeae2
+
+body {
+  background-color: #dfeae2;
 }
+
+#center {
+  width: 90%;
+  text-align: center;
+  margin:auto
+} 
